[package]
name = "rmd"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.1"
colored = "1.8.0"                                                       # https://github.com/mackwic/colored
tempdir = "0.3.0"
pulldown-cmark = { version = "0.7", default-features = false }
tempfile = "3.1.0"
regex = "1"

# rustbox
bitflags = "0.2.1"
termbox-sys = "0.2.11"
gag = "0.1.10"
num-traits = "0.2.12"

[[bin]]
path = "src/main.rs"
name = "rmd"
doc = false
